packages/typ/tests/fixtures/diagnostics/0556_functor_call_abstract_function_int_02.ml.infer.expected
File "0556_functor_call_abstract_function_int_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0556_functor_call_abstract_function_int_02 is not a valid module name.

File "0556_functor_call_abstract_function_int_02.ml", line 7, characters 15-16:
7 |   let y = X.id 1
                   ^
Error: The constant 1 has type int but an expression was expected of type X.t
